# symmetrical-waffle

./: LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  index.html  jobitem.html  nav.html
